--- a/employee-management-springboot/EmployeesManagementSystem/src/main/resources/application.properties
+++ b/employee-management-springboot/EmployeesManagementSystem/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=EmployeesManagementSystem
 
 spring.datasource.url=jdbc:mysql://localhost:3306/EmployeesManagementSystem_db
 spring.datasource.username=root
-spring.datasource.password=@Abhishek11611
+spring.datasource.password=********
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
